--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -11,6 +11,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-primary-shade: #7444b6;
   --ion-color-primary-tint: #7444b6;
   --ion-color-primary-10: #290056;
+  --ion-color-primary-dark: #290056;
 
   /** secondary **/
   --ion-color-secondary: #eddcff;
@@ -118,6 +119,7 @@ body.dark {
   --ion-color-primary-shade: #d7d8da;
   --ion-color-primary-tint: #f5f6f9;
   --ion-color-primary-10: #ffffff;
+  --ion-color-primary-dark: #290056;
 
   --ion-color-secondary: #625b71;
   --ion-color-secondary-rgb: 80, 200, 255;
